[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "exampleproject"
version = "0.0.1"
description = "Example for reproducing an error."
authors = ["pascal456"]
readme = "README.md"
repository = "https://github.com/pascal456/exampleproject"
packages = [{ include = "exampleproject" }]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pascal456/exampleproject/issues"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

fhdw-modelling = "^7.1.0"
kaleido = "0.2.1"
openpyxl = "^3.1.2"
pycaret = {extras = ["mlops", "models"], version = "^3.3.0"}
pyyaml = "^6.0.1"
redis = "^5.0.1"
seaborn = "^0.13.1"
shap = "^0.44.0"
tpot = "^0.12.2"
mlflow = "^2.10.2"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.8"
black = "^24.3.0"
flake8 = "^7.0.0"
ipykernel = "^6.29.0"
isort = "^5.13.2"
jupyter = "^1.0.0"
pydocstyle = "^6.3.0"
pylint = "^3.1.0"

[tool.bandit.assert_used]
skips = ['*/test_*.py']

[tool.isort]
profile = "black"
force_single_line = true

[tool.pydocstyle]
convention = "google"
